# linux-toolkit

./: ADDING_PAGES.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  Security.md  build.rs  build.sh  install.sh.template  install_build_deps.bat  install_hooks.sh  run_linux_release.sh  run_windows_release.bat
.github/ISSUE_TEMPLATE/: config.yml
.github/comments/: invalid-link.md  invalid-reproduction.md  resolved.md  simplify-reproduction.md
.script_examples/: select.sh  yesorno.sh
git/: pre-commit  pre-push
scripts/: scripts.toml
scripts/install/: install_nodejs.sh
scripts/network/: active_ports.sh  enable_firewall.sh  secure_ssh.sh
scripts/system/: update_upgrade.sh
src/: app.rs  commands.rs  config.rs  main.rs  scripts.rs  ui.rs  utils.rs
src/pages/: mod.rs  network.rs  page_1.rs  page_2.rs  security.rs
src/pages/defaults/: mod.rs  outputs.rs  ui.rs
src/utils/: ansi.rs  colors.rs  commands.rs  console.rs  menu.rs  mod.rs  page_builder.rs
src/variables/: colors.rs
