[package]
name = "linux-toolkit"
version = "0.1.8"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
which = "6.0"
colored = "2.0"
regex = "1.0"